[tool.poetry]
name = "news_history"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
requests = "^2.26.0"
ipykernel = "^6.4.1"
lxml = "^4.6.3"
uvicorn = "^0.15.0"
fastapi = "^0.70.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
